# LESS

./: .gitignore  .gitmodules  README  README.md  shell.nix
.github/workflows/: avx2.yml  neon.yml  ref.yml  ref_kats.yml
Additional_Implementations/AVX2/include/: api.h  monomial_mat.h  parameters.h
Additional_Implementations/AVX2/lib/: LESS.c  codes.c
Additional_Implementations/Benchmarking/: CMakeLists.txt
Additional_Implementations/KAT_Generation/: CMakeLists.txt
Additional_Implementations/KAT_Generation/lib/: PQCgenKAT_sign.c
Additional_Implementations/Other/: README.rtf
Optimized_Implementation/avx2/: .gitignore  CMakeLists.txt
Optimized_Implementation/avx2/include/: fq_arith.h  lookup_table.h  m1cycles.h  macro.h  rijndael
Optimized_Implementation/avx2/lib/: codes.c  sorting_network.c  test  transpose_avx2.c
Optimized_Implementation/avx512/: CMakeLists.txt
Optimized_Implementation/avx512/include/: LESS.h  fq_arith.h  keccakf1600.h  lookup_table.h  macro.h  monomial_mat.h  (+4 more)
Optimized_Implementation/include/: parameters.h
Optimized_Implementation/lib/: LESS.c  monomial.c
Optimized_Implementation/m4/: .gitignore  CMakeLists.txt  README.md  STM32F407VGTX_FLASH.ld  STM32F407VGTX_FLASH_CCM_SP.ld  STM32F411VETX_FLASH.ld  STM32F412ZGTX_FLASH.ld  STM32F469NIHX_FLASH.ld  STM32F469NIHX_FLASH_CCM_SP.ld  add_swo_viewer.py  platformio.ini  platformio_disco_f411ve.ini  platformio_disco_f412zg.ini  platformio_disco_f469ni.ini  shell.nix  shell_cross.nix  swo_parser.py  swo_test_runner.py  use_clang.py
Optimized_Implementation/m4/.cache/clangd/index/: LESS.c.5B77ED5CC548C65D.idx  LESS.h.51A08F268EF23347.idx  api.h.00B35AE8FA5DBA11.idx  canonical.c.8403709CDE432761.idx  canonical.h.4A527EB1F6B98A1A.idx  codes.c.7D0E82DFF545202C.idx  codes.h.F1DEB69AC50BF5D9.idx  fips202.c.3648A6EED5F07170.idx  fips202.h.0E7EB30FC4EE66B1.idx  fq_arith.h.867D84D9316F782B.idx  keccakf1600.c.5591590E6FDD83D5.idx  keccakf1600.h.A40E29B787091A00.idx  lookup_table.h.442D0EB777708CA4.idx  main.c.8689D77DC1F924D6.idx  monomial.c.73B2F262BDE2629D.idx  monomial_mat.h.783FC95A92846465.idx  parameters.h.3ADEA246AA8B5EA9.idx  rng.c.245509D88CD7861F.idx  rng.h.350A763E3BD165FD.idx  seedtree.c.B1BD63F3A037125C.idx  seedtree.h.F25AF2EB181F4276.idx  sha3.h.BE9142B7D1AB2801.idx  sign.c.EE7485748D64BA78.idx  sort.c.78E0BB9984F6423C.idx  sort.h.EDC71B6F99C95671.idx  transpose.c.DA5AD98A5783F591.idx  transpose.h.ECA4DB662607C0E8.idx  utils.c.BD0757C1A477C805.idx  utils.h.6A6BE774D7FD03AC.idx
Optimized_Implementation/m4/lib/less/: LESS.c  LESS.h  api.h  canonical.c  canonical.h  codes.c  codes.h  fips202.c  fips202.h  fq_arith.h  keccakf1600.c  keccakf1600.h  lookup_table.h  monomial.c  monomial_mat.h  parameters.h  rng.c  rng.h  seedtree.c  seedtree.h  sha3.h  sign.c  sort.c  sort.h  transpose.c  transpose.h  utils.c  utils.h
Optimized_Implementation/m4/lib/utils/: library.json  m4_utils.c  m4_utils.h
Optimized_Implementation/m4/src/: main.c
Optimized_Implementation/m4/test/: test_bigint.c  unity_config.c  unity_config.h
Optimized_Implementation/neon/: CMakeLists.txt  bench.sh  shell.nix
Optimized_Implementation/neon/include/: canonical.h  fips202.h  fq_arith.h  lookup_table.h  m1cycles.h  macro.h  rng.h
Optimized_Implementation/neon/lib/: codes.c  sort.c  transpose.c  transpose_neon.c
Optimized_Implementation/riscv/: CMakeLists.txt  a.out  shell.nix  test.c
Optimized_Implementation/rust/: .gitignore  Cargo.toml  flake.nix  shell.nix
Optimized_Implementation/rust/src/: config.rs  constants.rs  error.rs  fq.rs  helper.rs  less.rs  lib.rs  matrix.rs  monomial.rs  multiset.rs  opt.rs  prng.rs  transpose.rs  tree.rs  utils.rs  vector.rs
Reference_Implementation/: .gitignore  CMakeLists.txt  makefile
Reference_Implementation/include/: LESS.h  api.h  canonical.h  codes.h  fq_arith.h  lookup_table.h  m1cycles.h  monomial_mat.h  parameters.h  rng.h  seedtree.h  sha3.h  sort.h  transpose.h  utils.h
Reference_Implementation/lib/: LESS.c  LESS_without_tree.c  canonical.c  codes.c  fips202.c  keccakf1600.c  monomial.c  monomial_canonical.c  rng.c  seedtree.c  sign.c  sort.c  transpose.c  utils.c
Reference_Implementation/lib/bench/: bench_cf.c  bench_rref.c  bench_sorting.c  cycles.h  less_benchmark.c  m1cycles.h  test_helpers.c
Reference_Implementation/lib/nist/: KAT_NIST_rng.c  PQCgenKAT_sign.c
Reference_Implementation/lib/test/: arith.c  cf_test.h  inv_table.c  less_test.c  sort.c  test_canonical.c  test_helpers.c  test_helpers.h
Utilities/: cf.py  drbg.py  estimate_signatures.ipynb  fq.py  matrix.py  simulate_canonical_forms.ipynb
Utilities/.ipynb_checkpoints/: estimate_signatures-checkpoint.ipynb
Utilities/.virtual_documents/: simulate_canonical_forms.ipynb
Utilities/Benchmarking/: CMakeLists.txt  bench.sh
Utilities/Benchmarking/.cache/clangd/index/: less_benchmark.c.329D642CE5D2493C.idx  less_test.c.AFA9CE174907CF4F.idx
Utilities/Benchmarking/include/: timing_and_stat.h
Utilities/Benchmarking/lib/: cycles.h  less_benchmark.c  less_test.c  less_test.c~origin_main  m1cycles.h  test_helpers.c  test_helpers.h
Utilities/KAT_Generation/: CMakeLists.txt  PQCsignKAT_105174.rsp  PQCsignKAT_13940.rsp  gen_all_kat.sh
Utilities/KAT_Generation/KAT/: PQCsignKAT_13940.rsp
Utilities/KAT_Generation/include/: KAT_NIST_rng.h
Utilities/KAT_Generation/lib/: KAT_NIST_rng.c  KAT_NIST_rng.h  PQCgenKAT_sign.c
Utilities/MemoryBenchmarking/: CMakeLists.txt  README.md  bench.py  bench.sh
Utilities/MemoryBenchmarking/include/: m1cycles.h
Utilities/MemoryBenchmarking/lib/: less_benchmark.c  less_keygen.c  less_sign.c  less_verify.c
Utilities/Parameter_Generation_Scripts/: .gitignore  README.md  opt.py  seed_tree_param_computer.py
Utilities/cf/: sigma.sage  simulate_canonical_forms.ipynb
Utilities/python/: CF_faster_impl.py  CF_test.py  cf.py  code_utils.py  drbg.py  fq.py  less.py  matrix.py  monomial.py  permutation.py  utils.py
Utilities/scripts/: avx2_lookuptable.py
scripts/: debug_snippets.txt  mono_pvt_reuse_prob.py  new_constants.txt  seed_tree_structure_constants.py
(+73 files in other folders)
